# Chicago-Transit-Pipeline

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: aggregate.py  app.py  clean.py  download_data.py  ingest.py  models.py  pipeline.py
tests/: test_validation.py
